[package]
name = "waltid_nftkit"
version = "1.0.0"
authors = ["khaled battiche <khaled@walt.id>"]
edition = "2021"

[lib]
crate-type = ["cdylib" , "rlib"]

[dependencies]
near-sdk = "4.0.0"
uint = { version = "0.9.3", default-features = false }
serde_json = "1.0"


[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []
